...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Shp-Lv-ywd">
                                                <rect key="frame" x="0.0" y="227.5" width="314" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="email_SignIn">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hgj-5d-94i">
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Tj-fl-mdg">
                                                <rect key="frame" x="0.0" y="322" width="314" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="password_SignIn">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y3s-MF-tWc">
                                                <rect key="frame" x="0.0" y="376" width="314" height="40"/>
                                                <color key="backgroundColor" red="0.0" green="0.53333333329999999" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="X9b-AU-NXY"/>
                                                </constraints>
                                                <state key="normal" title="SIGN IN">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="onSignIn:" destination="pOe-Zi-t4h" eventType="touchUpInside" id="jjW-T4-eWD"/>
                                                </connections>
                                            </button>
...
                                    <constraint firstItem="NP7-MU-56i" firstAttribute="top" secondItem="vyp-nj-G1B" secondAttribute="top" constant="20" id="bPB-pz-fFZ"/>
                                    <constraint firstAttribute="trailing" secondItem="NP7-MU-56i" secondAttribute="trailing" constant="20" id="eZc-9Y-OuV"/>
                                </constraints>
                            </scrollView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="signInView"/>
                        <constraints>
                            <constraint firstItem="vyp-nj-G1B" firstAttribute="trailing" secondItem="lg7-V6-f6f" secondAttribute="trailing" id="37d-QG-twy"/>
                            <constraint firstItem="NP7-MU-56i" firstAttribute="centerX" secondItem="i8a-Uu-gAa" secondAttribute="centerX" id="AXk-2S-7bC"/>
                            <constraint firstAttribute="bottom" secondItem="vyp-nj-G1B" secondAttribute="bottom" id="LU0-Z5-2zX"/>
                            <constraint firstItem="vyp-nj-G1B" firstAttribute="top" secondItem="lg7-V6-f6f" secondAttribute="top" id="ZM5-x4-vsr"/>
                            <constraint firstItem="NP7-MU-56i" firstAttribute="width" secondItem="lg7-V6-f6f" secondAttribute="width" constant="-100" id="fNj-Us-50X"/>
...
