...
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y5H-rG-7vh">
                                        <rect key="frame" x="319" y="0.0" width="25" height="25"/>
                                        <accessibility key="accessibilityConfiguration" identifier="logout_home"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="5Lc-xP-zWL"/>
                                            <constraint firstAttribute="width" constant="25" id="Yse-zt-0eA"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                        <state key="normal" backgroundImage="logout"/>
...
                                        </connections>
                                    </view>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="homeView"/>
                        <constraints>
                            <constraint firstItem="Ddp-rc-pz1" firstAttribute="trailing" secondItem="zLT-i6-kGj" secondAttribute="trailing" constant="20" id="6Qf-qZ-hfA"/>
                            <constraint firstItem="zLT-i6-kGj" firstAttribute="leading" secondItem="Ddp-rc-pz1" secondAttribute="leading" constant="20" id="bLo-nY-C48"/>
                            <constraint firstItem="t0o-P1-DeQ" firstAttribute="top" secondItem="zLT-i6-kGj" secondAttribute="bottom" constant="40" id="iBD-rO-0x0"/>
                            <constraint firstItem="t0o-P1-DeQ" firstAttribute="leading" secondItem="Ddp-rc-pz1" secondAttribute="leading" constant="20" id="lhQ-iw-hPK"/>
                            <constraint firstItem="zLT-i6-kGj" firstAttribute="top" secondItem="Ddp-rc-pz1" secondAttribute="top" constant="20" id="oAX-nk-yML"/>
...
